# upros_class_code

./: .gitignore  Readme.md
src/upros_arm/: CMakeLists.txt  package.xml
src/upros_arm/config/: settings.yaml  tags.yaml
src/upros_arm/launch/: control_center.launch  go_home.launch  grab_apriltag.launch  grab_tof.launch  inverse_move.launch  recognize_apriltag.launch
src/upros_arm/scripts/: calibrate_servo.py  claw_control.py  grab_tof.py  inverse_control.py
src/upros_arm/src/: apriltag_grab.cpp  claw_test.cpp  control_center.cpp  go_home.cpp  inverse_move.cpp  tof_grab.cpp
src/upros_bump/: CMakeLists.txt  package.xml
src/upros_bump/src/: ros_bump.cpp  ros_bump_avoid.cpp
src/upros_core_move/: CMakeLists.txt  package.xml
src/upros_core_move/action/: CoreMove.action
src/upros_core_move/launch/: core_move.launch
src/upros_core_move/src/: base_planner.cpp  core_move.cpp  core_move_client.cpp  core_move_node.cpp  go_straight_planner.cpp  real_pid.cpp
src/upros_depth_vision/: CMakeLists.txt  package.xml
src/upros_depth_vision/launch/: view_pcl.launch  view_sensor.launch
src/upros_depth_vision/rviz/: sensor.rviz
src/upros_depth_vision/scripts/: upros_apriltag_detect.py  upros_color_detect.py  upros_face_detect.py  upros_follow_line.py  upros_image.py  upros_yolo_detect.py
src/upros_depth_vision/src/: upros_image.cpp  upros_point_filter.cpp  upros_red_stop.cpp
src/upros_description/: CMakeLists.txt  README.md  package.xml
src/upros_description/config/: upros_trajectory_control.yaml
src/upros_description/launch/: gazebo_bringup.launch  gazebo_model.launch  gazebo_race.launch  gazebo_upros_arm.launch  gazebo_upros_base.launch  load_diff_car.launch  load_diff_car_driver.launch  load_joint_urdf.launch  load_link_urdf.launch  load_xacro_arm.launch  load_xacro_depth_camera.launch  load_xacro_diff.launch  load_xacro_imu.launch  load_xacro_lidar.launch  load_xacro_sonar.launch
src/upros_description/meshes/: upros_lb_link.STL  upros_lf_link.STL  upros_rb_link.STL  upros_rf_link.STL
src/upros_description/model/: depth_camera.xacro  imu.xacro  lidar.xacro  single_arm.xacro  sonar.xacro  upros_arm.xacro  upros_base.xacro  upros_description.xacro
src/upros_description/src/: upros_plugin.cpp
src/upros_description/urdf/: diff.urdf  diff_driver.urdf  joint.urdf  link.urdf
src/upros_description/worlds/: cloister.world  race_world.world
src/upros_description/xacro/: depth_camera.xacro  diff_drive_controller.xacro  imu.xacro  lidar.xacro  single_arm.xacro  sonar.xacro  w2.xacro  w2_body.xacro  w2_depth_camera.xacro  w2_imu.xacro  w2_lidar.xacro  w2_sonar.xacro  w2a.xacro
src/upros_driver/: CMakeLists.txt  package.xml
src/upros_driver/launch/: bringup_w4at.launch
src/upros_driver/params/: base_params_with_imu_w2a.yaml  base_params_with_imu_w4a.yaml  base_params_with_imu_w4at.yaml
src/upros_driver/src/: base_driver_config.cpp  check_calc.cpp  dataframe.cpp  main.cpp  upros_driver.cpp
src/upros_hardware/handsfree_ros_imu/: CMakeLists.txt  README.md  package.xml
src/upros_hardware/zoo_bringup/: CMakeLists.txt  package.xml
src/upros_imu_filter/: CMakeLists.txt  package.xml
src/upros_imu_filter/scripts/: imu_rotate.py  ros_imu.py
src/upros_imu_filter/src/: imu_calibrate.cpp  imu_rotate.cpp  ros_imu.cpp
src/upros_lidar_filter/: CMakeLists.txt  package.xml
src/upros_lidar_filter/scripts/: angle_filter.py  distance_filter.py  move_lidar.py  ros_lidar.py
src/upros_lidar_filter/src/: angle_lidar_filter.cpp  blob_lidar_filter.cpp  distance_lidar_filter.cpp  filtered_scan_publisher.cpp  move_lidar.cpp  pcl_laser_icp.cpp  ros_lidar.cpp
src/upros_message/: CMakeLists.txt  package.xml
src/upros_message/action/: MyAction.action
src/upros_message/cfg/: Tutorials.cfg
src/upros_message/msg/: MultipleServo.msg  MyMessage.msg  SingleServo.msg
src/upros_message/srv/: ArmPosition.srv
src/upros_move_linear/: CMakeLists.txt  package.xml
src/upros_move_linear/scripts/: move_forward.py  teleop_twist_keyboard.py  turn_right.py
src/upros_move_linear/src/: move_forward.cpp  turn_right.cpp
src/upros_moveit/: CMakeLists.txt  package.xml
src/upros_moveit/launch/: moveit_hardware.launch  upros_moveit_controller.launch
src/upros_moveit/scripts/: upros_joint_move.py  upros_pose_move.py
src/upros_moveit/src/: upros_fk_demo.cpp  upros_ik_demo.cpp  upros_moveit_controller.cpp  upros_pose_demo.cpp
src/upros_navigation/: CMakeLists.txt  package.xml
src/upros_navigation/config/: area_path_params.yaml  move_base_params.yaml  set_area.yaml
src/upros_navigation/launch/: area_path.launch  gmapping.launch  navigation (copy).launch  navigation.launch  next_goal.launch  publish_goal.launch  save_map.launch  view_nav.launch
src/upros_navigation/maps/: introduce.md  map_edit.py  my_lab (3rd copy).pgm  my_lab (5th copy).pgm  my_lab (another copy).pgm  my_lab (copy).pgm  my_lab1.yaml  my_lab2.pgm  write.pcd
src/upros_navigation/rviz/: show.rviz
src/upros_navigation/scripts/: a_star.py  dwa.py  ros_pub_goal.py
src/upros_navigation/src/: AreaPath.cpp  AreaPathNode.cpp  next_goal.cpp  ros_pub_goal.cpp
src/upros_odometry/: CMakeLists.txt  package.xml
src/upros_odometry/launch/: robot_pose_ekf.launch  view_odom.launch
src/upros_odometry/rviz/: show.rviz
src/upros_odometry/scripts/: odom_ekf.py  ros_odom.py
src/upros_odometry/src/: odom_move.cpp  ros_odom.cpp
src/upros_range/: CMakeLists.txt  package.xml
src/upros_range/scripts/: ros_sonic.py  sonic_avoid.py
src/upros_range/src/: ros_sonic.cpp  sonic_avoid.cpp
src/upros_slam/: CMakeLists.txt  package.xml
src/upros_slam/maps/: my_lab.pgm
src/upros_slam/src/: clear_area.cpp  map_scan.cpp  pub_map.cpp
src/upros_transform/: CMakeLists.txt  package.xml
src/upros_transform/scripts/: get_current_pose.py  tf_listen.py
src/upros_transform/src/: odom_app.cpp  tf_echo.cpp  tf_listener.cpp  tf_publisher.cpp
src/upros_tutorial/: CMakeLists.txt  package.xml
src/upros_tutorial/launch/: ros_param.launch
src/upros_tutorial/src/: ros_log.cpp  (+10 more)
src/zoo_arm/: .gitignore  CMakeLists.txt  package.xml
(+357 files in other folders)
