<?xml version="1.0"?>
<package format="2">
  <name>upros_moveit</name>
  <version>0.0.0</version>
  <description>The upros_moveit package</description>
  <maintainer email="bcsh@todo.todo">bcsh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>upros_message</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>upros_message</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>upros_message</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <export>
  </export>
</package>
